--- a/index.html
+++ b/index.html
@@ -2,16 +2,7 @@
 <html>
 <head> 
 <meta charset="utf-8"> 
-<title>Florr.io)</title> 
-</head>
-<body>
-
-<form>
-  <label>Name:
-    <input name="submitted-name" autocomplete="name">
-  </label>
-  <button>Save</button>
-</form>
-
-</body>
-</html>
+<title>Florr.io</title> 
+<script>
+document.getElementById("demo").innerHTML = "Hello JavaScript!";
+</script>
