--- a/index.html
+++ b/index.html
@@ -1,8 +1,16 @@
 <!DOCTYPE html>
 <html>
-<head> 
-<meta charset="utf-8"> 
-<title>Florr.io</title> 
+<body>
+
+<h1>使用 JavaScript 更改文本</h1>
+
+<p>本例把 "Hello JavaScript!" 写入 id="demo" 的 HTML 元素内：</p>
+
+<p id="demo"></p>
+
 <script>
 document.getElementById("demo").innerHTML = "Hello JavaScript!";
-</script>
+</script> 
+
+</body>
+</html>
