--- a/index.html
+++ b/index.html
@@ -1,8 +1,26 @@
+<!DOCTYPE html>
 <html>
 <head>
     <title>EndCentury - 博客</title>
+    <style>
+    body {
+      background-image: url(https://cdnjson.com/images/2023/12/17/v2-86a59b68eb7d37659b5b51d68e044540_r.jpg);
+      background-repeat: no-repeat;
+      background-size: cover;
+    }
+    .blog-link {
+      border: 1px solid black;
+      padding: 10px;
+      margin: 10px;
+      display: inline-block;
+    }
+    </style>
 </head>
 <body>
-    <img src="v2-86a59b68eb7d37659b5b51d68e044540_r.jpg">
+
+<div class="blog-link">Blog Link 1</div>
+<div class="blog-link">Blog Link 2</div>
+<div class="blog-link">Blog Link 3</div>
+
 </body>
 </html>
