--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
     </style>
 </head>
 <body>
-
+<div class="text">
+    <h1>EndCentury's blog</h1>
 <div class="blog-link">Blog Link 1</div>
 <div class="blog-link">Blog Link 2</div>
 <div class="blog-link">Blog Link 3</div>
