--- a/index.html
+++ b/index.html
@@ -5,23 +5,28 @@
     <style>
     body {
       background-image: url(https://cdnjson.com/images/2023/12/17/v2-86a59b68eb7d37659b5b51d68e044540_r.jpg);
-      background-repeat: no-repeat;
-      background-size: cover;
     }
     .blog-link {
-      border: 1px solid black;
-      padding: 10px;
-      margin: 10px;
-      display: inline-block;
-    }
+  border: 1px solid white;
+  padding: 10px;
+  margin: 10px;
+  display: inline-block;
+  color: white;
+  text-align: center;
+  font-size: 20px;
+}
+		.blog-link a {
+  text-decoration: none;
+}
+		
     </style>
 </head>
 <body>
 <div class="text">
-    <h1>EndCentury's blog</h1>
-<div class="blog-link">Blog Link 1</div>
-<div class="blog-link">Blog Link 2</div>
-<div class="blog-link">Blog Link 3</div>
+    <h1><font color=white>EndCentury's blog</h1>
+<div class="blog-link"><a href="..."><font color=white>Blog Link 1</a></div>
+<div class="blog-link"><a href="..."><font color=white>Blog Link 2</a></div>
+<div class="blog-link"><a href="..."><font color=white>Blog Link 3</a></div>
 
 </body>
 </html>
