--- a/index.html
+++ b/index.html
@@ -24,9 +24,22 @@
 <body>
 <div class="text">
     <h1><font color=white>EndCentury's blog</h1>
+		<div class="blog-link">
+<h2><font color=white>Solution</h2>		
 <div class="blog-link"><a href="..."><font color=white>Blog Link 1</a></div>
 <div class="blog-link"><a href="..."><font color=white>Blog Link 2</a></div>
 <div class="blog-link"><a href="..."><font color=white>Blog Link 3</a></div>
+	</div>
+	<div class="blog-link">
+<h2><font color=white>Blog</h2>		
+<div class="blog-link"><a href="https://www.luogu.com.cn/blog/EndCentury/"><font color=white>Luogu Blog</a></div>
+<div class="blog-link"><a href="..."><font color=white>Blog Link 2</a></div>
+<div class="blog-link"><a href="..."><font color=white>Blog Link 3</a></div></div>
+	<div class="blog-link">
+<h2><font color=white>Other</h2>		
+<div class="blog-link"><a href="https://www.luogu.com.cn/blog/EndCentury/"><font color=white>Luogu Blog</a></div>
+<div class="blog-link"><a href="..."><font color=white>Blog Link 2</a></div>
+<div class="blog-link"><a href="..."><font color=white>Blog Link 3</a></div></div>
 
 </body>
 </html>
