--- a/index.html
+++ b/index.html
@@ -190,8 +190,8 @@ opacity : 0.8;
 	transition-duration: 0.3s;/* 缩放的过渡时间 */
 }
 .top_info .round_div_all .round_div .r-s01 {
-	height: 40px;
-	width: 40px;
+	height: 100px;
+	width: 100px;
 	margin-top: 20px;
 	margin-right: auto;
 	margin-left: auto;
@@ -298,7 +298,7 @@ a:active {
   <div class="top-text">通知<br>Block vs Zombies 3.0现已发布3D Pro Max 版本</div>
   <div class="round_div_all">
   <div class="round_div">
-    <div class="r-s01"><a href="https://endcentury.lanzouo.com/b04r37lud" target="_blank"><img src="http://cdn.psdhtml.cn/wx_images/icon03.png" width="40" height="40"></a></div>
+    <div class="r-s01"><a href="https://endcentury.lanzouo.com/b04r37lud" target="_blank"><img src="https://contents.baka.zone/web-cdn/assets/official-website/img/zh-cn/top/text_catch01_6.png" width="100" height="100"></a></div>
     <div class="r-s02">下载<br>arhd</div>
   </div>
   
